# build_docker_in_runpod_0220

./: BUILD.bazel  MODULE.bazel  README.md  bazel-bin  bazel-build_docker_in_runpod_0220  bazel-out  bazel-testlogs  config.bzl  pull_image.sh
