load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("//:config.bzl", "USERNAME")

# Create a new OCI image with an added text file
oci_image(
    name = "custom_image",
    base = "@base_image",
    tars = [
        ":add_text_file",
    ],
)

# Define the text file to be added
genrule(
    name = "add_text_file",
    srcs = [],
    outs = ["text_layer.tar"],
    cmd = "echo 'Hello from Bazel!' > hello.txt && tar -cf $@ hello.txt",
)

oci_push(
    name = "push_custom_image",
    image = ":custom_image",
    repository = "index.docker.io/{}/custom_image".format(USERNAME),
    remote_tags = ["latest"]
)