load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("//:config.bzl", "USERNAME")

# Create a new OCI image with an added text file
oci_image(
    name = "comfyui_0220_1226",
    base = "@new_base_image",
    tars = [
        ":add_text_file",
    ],
)

# Define the text file to be added
genrule(
    name = "add_text_file",
    srcs = [],
    outs = ["text_layer.tar"],
    cmd = "echo 'Hello from Bazel!' > hello.txt && tar -cf $@ hello.txt",
)

oci_push(
    name = "push_comfyui_0220_1226",
    image = ":comfyui_0220_1226",
    repository = "index.docker.io/{}/comfyui_0220_1226".format(USERNAME),
    remote_tags = ["latest"]
)